--- a/.env
+++ b/.env
@@ -1,13 +1,23 @@
-TEST_POSTGRES_PORT=55432
-TEST_POSTGRES_USER=postgres
-TEST_POSTGRES_PASSWORD=postgres
-TEST_POSTGRES_DB=postgres
-TEST_MYSQL_PORT=53306
-TEST_MYSQL_ROOT_PASSWORD=root
+TEST_DDAGENT_API_KEY=invalid_key_but_this_is_fine
+TEST_DDAGENT_HOST=localhost
+TEST_DDAGENT_PORT=8126
+TEST_ELASTICSEARCH_HOST=127.0.0.1
+TEST_ELASTICSEARCH_NATIVE_PORT=9300
+TEST_ELASTICSEARCH_REST_PORT=9200
+TEST_MEMCACHED_HOST=127.0.0.1
+TEST_MEMCACHED_PORT=11211
+TEST_MONGODB_HOST=127.0.0.1
+TEST_MONGODB_PORT=27017
+TEST_MYSQL_DB=mysql
+TEST_MYSQL_HOST=127.0.0.1
 TEST_MYSQL_PASSWORD=mysql
+TEST_MYSQL_PORT=3306
+TEST_MYSQL_ROOT_PASSWORD=root
 TEST_MYSQL_USER=mysql
-TEST_ELASTICSEARCH_REST_PORT=49200
-TEST_ELASTICSEARCH_NATIVE_PORT=49300
-TEST_REDIS_PORT=46379
-TEST_MONGODB_PORT=57017
-TEST_MEMCACHED_PORT=41121
+TEST_POSTGRES_DB=postgres
+TEST_POSTGRES_HOST=127.0.0.1
+TEST_POSTGRES_PASSWORD=postgres
+TEST_POSTGRES_PORT=5432
+TEST_POSTGRES_USER=postgres
+TEST_REDIS_HOST=127.0.0.1
+TEST_REDIS_PORT=6379
