--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,3 +126,8 @@ jobs:
         path: /tmp/circleci-artifacts
     - store_artifacts:
         path: /tmp/circleci-test-results
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
