--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ TEST_MEMCACHED_HOST=127.0.0.1
 TEST_MEMCACHED_PORT=11211
 TEST_MONGODB_HOST=127.0.0.1
 TEST_MONGODB_PORT=27017
+TEST_MYSQL_DB=mysql
 TEST_MYSQL_HOST=127.0.0.1
 TEST_MYSQL_PASSWORD=mysql
 TEST_MYSQL_PORT=3306
