--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,8 +78,9 @@ jobs:
     - run:
         name: Install dependencies
         command: |
+          set -ex
           sudo apt-get update
-          sudo apt-get install -y rsync
+          sudo apt-get install -y rsync openjdk-8-jre-headless ca-certificates-java
     - run:
         name: Install RVM
         command: |
