--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
     - image: redis:3.0
     - image: mongo:3.5
     - image: memcached:1.5-alpine
-    - image: datadog/docker-dd-agent
+    - image: datadog/agent
       environment:
         - DD_APM_ENABLED=true
         - DD_BIND_HOST=0.0.0.0
