--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 TEST_DDAGENT_API_KEY=invalid_key_but_this_is_fine
-TEST_DDAGENT_HOST=127.0.0.1
+TEST_DDAGENT_HOST=localhost
 TEST_DDAGENT_PORT=8216
 TEST_ELASTICSEARCH_HOST=127.0.0.1
 TEST_ELASTICSEARCH_NATIVE_PORT=9300
